fix: popconfirm action align

--- a/packages/element-plus-theme-sop/src/popconfirm.scss
+++ b/packages/element-plus-theme-sop/src/popconfirm.scss
@@ -4,6 +4,7 @@
 
 .el-popconfirm__action {
   margin-top: 16px;
+  text-align: right; // WTF? storybook OK，项目中不生效
 
   // 设计规范中使用正常按钮，element-plus 写死了 size: small，此处需要强制覆写
   .el-button {
